--- a/app.yaml
+++ b/app.yaml
@@ -11,6 +11,14 @@ handlers:
 - url: /.*
   script: main.app
   secure: never
+skip_files:
+- ^(.*/)?#.*#$
+- ^(.*/)?.*~$
+- ^(.*/)?.*\.py[co]$
+- ^(.*/)?.*/RCS/.*$
+- ^(.*/)?\..*$
+- ^node_modules$
+- ^src$
 
 # TODO: List any other App Engine SDK libs you may need here.
 
